# Tg_Bot_cv2ai_FaceDetection

./: .env.dist  .gitignore  README.md  bot.py  pyproject.toml  settings.ini  test.txt
tgbot/: config.py  keyboards.py  states.py  utils.py
tgbot/handlers/: .new_lvl_menu.py.swp  basic.py  clustering.py  control.py  correction.py  detection.py  menu.py  new_lvl_menu.py  recognition.py  training.py
tgbot/service/: clustering.py  correction.py  detection_age.py  detection_cnn.py  detection_dnn.py  detection_f68.py  detection_haar.py  detection_hog.py  detection_mpdnn.py  detection_mtcnn.py  facePoints.py  face_avatar.py  recognition_cnn.py  recognition_haar.py  smart_avatar.py
