[tool.poetry]
name = "dnp_cv2ai_bot"
version = "0.1.0"
description = "Smart bot"
authors = ["Dmitry Panfilov <mail@domain.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.20"
environs = "^9.5.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
