[tool.poetry]
name = "dnp_cv2ai_bot"
version = "0.1.0"
description = "Smart bot"
authors = ["Dmitry Panfilov <mail@domain.com>"]

[tool.poetry.dependencies]
#python = "^3.8"
python = ">=3.8, <3.11"
aiogram = "^2.20"
environs = "^9.5.0"
aioredis = "^2.0.1"
numpy = "^1.22.3"
cmake = "^3.22.4"
dlib = "^19.24.0"
mediapipe = "^0.8.10"
opencv-python = "^4.5.5"
scipy = "^1.8.1"
sklearn = "^0.0"
scikit-image = "^0.19.2"
kneed = "^0.7.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
